// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`click submit button calls onSubmit prop 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -107,11 +107,11 @@
              \\"textTransform\\": \\"none\\",
            },
          ]
        }
        underlineColorAndroid=\\"rgba(0,0,0,0)\\"
-       value=\\"test\\"
+       value=\\"\\"
      />
    </View>
    <View
      accessible={true}
      focusable={true}
@@ -128,9 +128,9 @@
        }
      }
      testID=\\"SubmitButton\\"
    >
      <SvgMock
-       color=\\"#3CC8E6\\"
+       color=\\"#ECEEF2\\"
      />
    </View>
  </RCTSafeAreaView>"
`;

exports[`click submit button calls onSubmit prop fails 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`handles start edit 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -9,52 +9,70 @@
      }
    }
  >
    <View
      style={
+       Object {
+         \\"backgroundColor\\": \\"#B4B6BA\\",
+         \\"borderRadius\\": 25,
+       }
+     }
+   >
+     <View
+       accessible={true}
+       focusable={true}
+       onClick={[Function onClick]}
+       onResponderGrant={[Function onResponderGrant]}
+       onResponderMove={[Function onResponderMove]}
+       onResponderRelease={[Function onResponderRelease]}
+       onResponderTerminate={[Function onResponderTerminate]}
+       onResponderTerminationRequest={[Function onResponderTerminationRequest]}
+       onStartShouldSetResponder={[Function onStartShouldSetResponder]}
+       style={
+         Object {
+           \\"backgroundColor\\": \\"transparent\\",
+           \\"opacity\\": 1,
+         }
+       }
+       testID=\\"IconButton\\"
+     >
+       <Text
+         allowFontScaling={false}
+         style={
            Array [
              Object {
-           \\"alignItems\\": \\"center\\",
-           \\"justifyContent\\": \\"center\\",
+               \\"color\\": undefined,
+               \\"fontSize\\": 12,
              },
              Array [
                Object {
-             \\"borderRadius\\": 18,
-             \\"height\\": 36,
-             \\"width\\": 36,
+                 \\"color\\": \\"#ffffff\\",
                },
                Object {
-             \\"backgroundColor\\": \\"#B4B6BA\\",
+                 \\"fontSize\\": 16,
                },
-           undefined,
-         ],
-       ]
-     }
-   >
-     <Text
-       style={
                Array [
                  Object {
+                   \\"margin\\": 10,
+                 },
+                 Object {
                    \\"color\\": \\"#ffffff\\",
-             \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-             \\"fontSize\\": 12,
-             \\"fontStyle\\": \\"normal\\",
-             \\"lineHeight\\": 16,
-             \\"textAlign\\": \\"center\\",
-             \\"textAlignVertical\\": \\"bottom\\",
-             \\"textTransform\\": \\"none\\",
                  },
+               ],
+             ],
              Object {
-             \\"fontSize\\": 20,
-             \\"height\\": 19,
-             \\"lineHeight\\": 20,
+               \\"fontFamily\\": \\"icomoon\\",
+               \\"fontStyle\\": \\"normal\\",
+               \\"fontWeight\\": \\"normal\\",
              },
+             Object {},
            ]
          }
        >
-       
+         
        </Text>
+     </View>
    </View>
    <View
      style={
        Object {
          \\"backgroundColor\\": \\"#ECEEF2\\",
@@ -107,11 +125,11 @@
              \\"textTransform\\": \\"none\\",
            },
          ]
        }
        underlineColorAndroid=\\"rgba(0,0,0,0)\\"
-       value=\\"\\"
+       value=\\"esse repellat quisquam\\"
      />
    </View>
    <View
      accessible={true}
      focusable={true}
@@ -128,9 +146,9 @@
        }
      }
      testID=\\"SubmitButton\\"
    >
      <SvgMock
-       color=\\"#ECEEF2\\"
+       color=\\"#3CC8E6\\"
      />
    </View>
  </RCTSafeAreaView>"
`;

exports[`renders with disabled submit button 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -107,11 +107,11 @@
              \\"textTransform\\": \\"none\\",
            },
          ]
        }
        underlineColorAndroid=\\"rgba(0,0,0,0)\\"
-       value=\\"test\\"
+       value=\\"\\"
      />
    </View>
    <View
      accessible={true}
      focusable={true}
@@ -128,9 +128,9 @@
        }
      }
      testID=\\"SubmitButton\\"
    >
      <SvgMock
-       color=\\"#3CC8E6\\"
+       color=\\"#ECEEF2\\"
      />
    </View>
  </RCTSafeAreaView>"
`;

exports[`renders with text entered 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -107,11 +107,11 @@
              \\"textTransform\\": \\"none\\",
            },
          ]
        }
        underlineColorAndroid=\\"rgba(0,0,0,0)\\"
-       value=\\"\\"
+       value=\\"test\\"
      />
    </View>
    <View
      accessible={true}
      focusable={true}
@@ -128,9 +128,9 @@
        }
      }
      testID=\\"SubmitButton\\"
    >
      <SvgMock
-       color=\\"#ECEEF2\\"
+       color=\\"#3CC8E6\\"
      />
    </View>
  </RCTSafeAreaView>"
`;

exports[`renders without actions 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "marginHorizontal": 16,
      "marginVertical": 12,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        Array [
          Object {
            "borderRadius": 18,
            "height": 36,
            "width": 36,
          },
          Object {
            "backgroundColor": "#B4B6BA",
          },
          undefined,
        ],
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "textAlign": "center",
            "textAlignVertical": "bottom",
            "textTransform": "none",
          },
          Object {
            "fontSize": 20,
            "height": 19,
            "lineHeight": 20,
          },
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#ECEEF2",
        "borderRadius": 8,
        "flex": 1,
        "marginHorizontal": 8,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCorrect={true}
      autoFocus={false}
      blurOnSubmit={true}
      multiline={false}
      onChangeText={[Function]}
      onSubmitEditing={[Function]}
      placeholder="Placeholder"
      placeholderTextColor="#B4B6BA"
      rejectResponderTermination={true}
      returnKeyType="done"
      selectionColor="#005A7F"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderBottomColor": "#3CC8E6",
            "borderBottomWidth": 1,
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 16,
            "fontStyle": "normal",
            "letterSpacing": 0.25,
            "lineHeight": 24,
            "paddingVertical": 5,
            "textAlignVertical": "center",
            "textTransform": "none",
          },
          Object {
            "borderBottomWidth": 0,
            "color": "#505256",
            "flex": 1,
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "lineHeight": 20,
            "paddingHorizontal": 12,
            "paddingVertical": 6,
            "textAlignVertical": "center",
            "textTransform": "none",
          },
        ]
      }
      underlineColorAndroid="rgba(0,0,0,0)"
      value=""
    />
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="SubmitButton"
  >
    <SvgMock
      color="#ECEEF2"
    />
  </View>
</RCTSafeAreaView>
`;
